feat(prob5): 금액을 화폐단위로 차례로 나누어주는 기능 구현